# leaf-learning

./: .gitignore  AGENTS.md  DESIGN.md  IMPLEMENTATION.md  PROGRESS.md  README.md  package-lock.json  run-dev  run-dev.sh  test.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: ai.py  cors.py  dedup.py  graph_utils.py  main.py  mock_ai.py  models.py  openai_key.py  phase2_prefetch.py  resource_validation.py  roadmap_builder.py  source_verifier.py  storage.py
backend/app/routers/: __init__.py  chat.py  graph.py  session.py
backend/tests/: helpers.py  openai_integration.py  test_ai_prompt.py  test_ai_structured_outputs.py  test_api_flow.py  test_cors_config.py  test_logging_config.py  test_mock_ai.py  test_models_storage.py  test_openai_integration.py  test_openai_key.py  test_phase2_prefetch.py  test_resource_validation.py  test_roadmap_builder.py  test_source_verifier.py
docs/: DESIGN.md  ui-ux-goal.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  declarations.d.ts  index.css  types.ts
frontend/src/components/: CenterLineEdge.tsx  DeepDiveButton.tsx  GraphCanvas.tsx  GrayedNode.tsx  LaunchGraphBackground.test.ts  LaunchGraphBackground.tsx  NodeChatPanel.tsx  Phase1OptionCard.tsx  Phase1View.tsx  Phase2FocusOverlay.tsx  Phase2Node.tsx  Phase2Sidebar.tsx  ResolutionPicker.tsx  StartScreen.tsx  components.test.tsx  launchGraph.ts  launchGraphBackgroundLayout.ts  phase1CanvasText.test.ts  phase1CanvasText.ts  phase2LayoutAnimation.test.ts  ui.test.tsx  (+5 more)
(+18 files in other folders)
