[project]
name = "alphag3n-backend"
version = "0.1.0"
description = "FastAPI backend for the OpenAI React starter."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "sse-starlette>=1.8.0",
  "uvicorn[standard]>=0.29.0",
]
